# src/models/FilterOption.ts
@@ -1,0 +1,5 @@
+export default interface FilterOption {
+  id: number;
+  label: string;
+  searchText: string;
+}
