# src/models/NameFilters.ts
@@ -1,0 +1,8 @@
+import FilterOption from "./FilterOption";
+
+export default interface NameFilters {
+  genderOptions: FilterOption[];
+  decadeOptions: FilterOption[];
+  cultureOptions: FilterOption[];
+  languageOptions: FilterOption[];
+}
